
2017-05-30  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* pplex.l, ppparse.y: removed PAGE_DIRECTIVE (checked in pplex.l,
	  processed in cobc.c)
	* pplex.l: don't skip separator period in directives,
	  combined common parts for directives in a single place,
	  better error handling for directives
	* pplex.l: added MF extension $DISPLAY VCS = version string as PENDING
	* cobc.c: directly pass the source_format to (line_has_page_eject),
	  (line_has_listing_directive) and process it there
	* cobc.c: added (get_first_nonspace, get_directive_start) to correctly
	  process listing related directives

2017-05-30  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* pplex.l, ppparse.y: removed undocumented extensions
	  >> DEFINE CONSTANT (use 01 CONSTANT with/without FROM clause instead)
	  and the optional AS in $SET CONSTANT VAR AS VAL - as MF doesn't allow
	  the AS at all
	* pplex.l, ppparse.y: implemented >> LEAP-SECOND directive (while keeping
	  the ON setting as PENDING)

2017-05-29  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y, typeck.c: adjustments of constant value changes

2017-05-28  Ron Norman <rjn@inglenet.com>

	* field.c, typeck.c: check for misplaced operators in constant expressions

2017-05-26  Ron Norman <rjn@inglenet.com>

	Work on constant values:
	* checks for application 78 versus internal 78 and allow internal 78
	  to get handled
	* add constant-01 and constant-78 compile options

2017-05-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	Work on constant values:
	* parser.y, typeck.c, tree.h: tightened syntax checks for NEXT /
	  START OF as 78 VALUE
	* typeck.c: set correct values for NEXT / START OF as 78 VALUE

2017-05-24  Ron Norman <rjn@inglenet.com>

	Work on constant values:
	* parser.y, typeck.c, tree.h: 78/CONSTANT accepts VALUE expression
	* parser.y, typeck.c, tree.h: implemented NEXT / START OF as 78 VALUE
	* ppparse.y, cobc.c, cobc.h: allow define list to be