@@ -2648,6 +2648,97 @@ prog.cob: 14: error: ACUCOBOL numeric literal does not conform to COBOL 2014
 AT_CLEANUP
 
 
+AT_SETUP([Segmentation Module])
+AT_KEYWORDS([misc])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION   DIVISION.
+       PROGRAM-ID.      prog.
+       DATA             DIVISION.
+       PROCEDURE        DIVISION.
+
+       DECLARATIVES.
+
+       DEC-1 SECTION 49.
+           CONTINUE.
+
+       DEC-2 SECTION 50.
+           CONTINUE.
+
+       END DECLARATIVES.
+
+       SEC-1 SECTION 00.
+           CONTINUE.
+
+       SEC-2 SECTION 01.
+           CONTINUE.
+
+       SEC-3 SECTION -00.
+           CONTINUE.
+
+       SEC-4 SECTION 100.
+           CONTINUE.
+
+       SEC-5 SECTION 49.
+           CONTINUE.
+
+       SEC-6 SECTION 50.
+           PERFORM SEC-1.
+
+       SEC-7 SECTION 99.
+           PERFORM SEC-1.
+
+           STOP RUN.
+])
+
+AT_CHECK([$COMPILE_ONLY prog.cob], [1], [],
+[prog.cob: in section 'DEC-1':
+prog.cob: 9: warning: SECTION segment ignored
+prog.cob: in section 'DEC-2':
+prog.cob: 12: warning: SECTION segment ignored
+prog.cob: in section 'SEC-1':
+prog.cob: 17: warning: SECTION segment ignored
+prog.cob: in section 'SEC-2':
+prog.cob: 20: warning: SECTION segment ignored
+prog.cob: in section 'SEC-3':
+prog.cob: 23: error: non-negative integer value expected
+prog.cob: 23: warning: SECTION segment ignored
+prog.cob: in section 'SEC-4':
+prog.cob: 26: warning: SECTION segment ignored
+prog.cob: in section 'SEC-5':
+prog.cob: 29: warning: SECTION segment ignored
+prog.cob: in section 'SEC-6':
+prog.cob: 32: warning: SECTION segment ignored
+prog.cob: in section 'SEC-7':
+prog.cob: 35: warning: SECTION segment ignored
+])
+AT_CHECK([$COMPILE_ONLY -std=cobol85 prog.cob], [1], [],
+[prog.cob: in section 'DEC-1':
+prog.cob: 9: warning: SECTION segment is obsolete in COBOL 85
+prog.cob: 9: warning: SECTION segment within DECLARATIVES is not implemented
+prog.cob: in section 'DEC-2':
+prog.cob: 12: warning: SECTION segment is obsolete in COBOL 85
+prog.cob: 12: error: SECTION segment-number in DECLARATIVES must be less than 50
+prog.cob: 12: warning: SECTION segment within DECLARATIVES is not implemented
+prog.cob: in section 'SEC-1':
+prog.cob: 17: warning: SECTION segment is obsolete in COBOL 85
+prog.cob: in section 'SEC-2':
+prog.cob: 20: warning: SECTION segment is obsolete in COBOL 85
+prog.cob: in section 'SEC-3':
+prog.cob: 23: error: non-negative integer value expected
+prog.cob: 23: warning: SECTION segment is obsolete in COBOL 85
+prog.cob: in section 'SEC-4':
+prog.cob: 26: warning: SECTION segment is obsolete in COBOL 85
+prog.cob: 26: error: SECTION segment-number must be less than or equal to 99
+prog.cob: in section 'SEC-5':
+prog.cob: 29: warning: SECTION segment is obsolete in COBOL 85
+prog.cob: in section 'SEC-6':
+prog.cob: 32: warning: SECTION segment is obsolete in COBOL 85
+prog.cob: in section 'SEC-7':
+prog.cob: 35: warning: SECTION segment is obsolete in COBOL 85
+])
+AT_CLEANUP
+
 
 AT_SETUP([ACUCOBOL 32bit literal size])
 # ACUCOBOL literal max - the result is system dependent on size of unsigned long int
