@@ -1,4 +1,11 @@
 
+2017-06-02  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* reserved.c, cobc.h, parser.y: added context check for OBJECT-COMPUTER
+	* parser.y: added missing parts to MEMORY SIZE (parsing only)
+	* parser.y: checking of segment values in SEGMENT LIMIT and SECTION,
+	  allow segment numbers in declaratives (PENDING)
+
 2017-05-30  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* pplex.l, ppparse.y: removed PAGE_DIRECTIVE (checked in pplex.l,
